test/negative/207_add_int_string.err
207_add_int_string.fx:2:11: error: the appropriate match for '__add__' of type '((int, string) -> <unknown>)' is not found.
Candidates:
 '__add__: ((string, string) -> string)' defined at Builtins.fx:L:C,
 '__add__: ((string, char) -> string)' defined at Builtins.fx:L:C,
 '__add__: ((char, string) -> string)' defined at Builtins.fx:L:C,
 '__add__: ((char, char) -> string)' defined at Builtins.fx:L:C,
 '__add__: (('t list, 't list) -> <unknown>)' defined at Builtins.fx:L:C,
 '__add__: ((long, long) -> long)' defined at Builtins.fx:L:C,
 '__add__: (((...), (...)) -> <unknown>)' defined at Builtins.fx:L:C,
 '__add__: (('ta [+], 'tb [+]) -> <unknown>)' defined at Array.fx:L:C


1 errors occured during type checking.
